@@ -101,6 +101,7 @@ LIBASSUAN_1.0 {
     assuan_free;
     assuan_socket_connect_fd;
     assuan_check_version;
+    assuan_sock_set_sockaddr_un;
 
     __assuan_close;
     __assuan_pipe;
